[package]
name = "finalfusion-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.3", features = ["trace", "cors", "compression-gzip"] }
finalfusion = "0.18"   
text-splitter = "0.28" 
anyhow = "1.0"       
clap = { version = "4.5", features = ["derive"] }
unicode-segmentation = "1.11"
ndarray = "0.16"